# gpu-fpga-dma

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
control/: Makefile  README.md
control/nvmevirt/: Kbuild  Makefile  Makefile.local  admin.c  backend_direct.c  backend_model.c  backend_nvme.c  coalesce.c  coalesce.h  coalesce_backend.h  fpga_fwd.c  fpga_fwd.h  gpu_mem.c  gpu_mem.h  gpu_memcpy.c  gpu_memcpy.h  io.c  main.c  nvme.h  nvmev.h  pci.c
driver/: Kbuild  fpga_gdr.c  fpga_gdr.h
hw/: build_xclbin.sh  gdr_write.cfg  gdr_write.cpp  gnn_gather.cfg  gnn_gather.cpp  rd_probe.cfg  rd_probe.cpp
scripts/: run.sh  run_gnn.sh  spike.sh
src/: Makefile  Makefile.local  README.md  bar_write_bench.cu  gnn_demo.cu  gpu_pull.cu  gpu_push.cu  gpu_push_spike.cu  isefs.c  isefs.h  isefs.py  isefs_gpupull.cu  nvmev_l1.h  queue_layout.h  rd_probe_host.cu
